assets/12-kuber-13/manifecsts/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: wbitt/network-multitool
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - name: frontend-app
      port: 80
      targetPort: 80
  selector:
    app: frontend-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: wbitt/network-multitool
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - name: backend-app
      port: 80
      targetPort: 80
  selector:
    app: backend-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-app
  template:
    metadata:
      labels:
        app: cache-app
    spec:
      containers:
        - name: cache-app
          image: wbitt/network-multitool
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
spec:
  ports:
    - name: cache-app
      port: 80
      targetPort: 80
  selector:
    app: cache-app
