assets/12-kuber-13/manifecsts/network-policy-cache.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-cache
spec:
  podSelector:
    matchLabels:
      app: cache-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend-app
  policyTypes:
    - Ingress
