assets/12-kuber-13/manifecsts/network-policy-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
